重新命名项目，修改前缀

--- a/Server.html
+++ b/Server.html
@@ -40,7 +40,7 @@
 <body>
     <div id="app-mount">
     </div>
-    <script type="text/javascript" src="/cbd/css.js" async></script>
+    <script type="text/javascript" src="/lyj/css.js" async></script>
 
     <!--[if IE]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-shim.min.js"></script>
@@ -60,7 +60,7 @@
 
     <!-- 这行代码必须要,document.write会将这行代码写进去 -->
     <script type="text/javascript" src="" async></script>
-    <script type="text/javascript" src="/cbd/app.js" async></script>
+    <script type="text/javascript" src="/lyj/app.js" async></script>
 
 </body>
 
